src/OpenCvSharp/Internal/PInvoke/NativeMethods/NativeMethods_xfeatures2d_AffineFeature2D.cs

using System.Runtime.CompilerServices;
using System.Runtime.InteropServices;

#pragma warning disable 1591
#pragma warning disable CA1401 // P/Invokes should not be visible
#pragma warning disable IDE1006 // Naming style
// ReSharper disable InconsistentNaming

namespace OpenCvSharp.Internal;

static partial class NativeMethods
{
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus xfeatures2d_AffineFeature2D_create1(
        IntPtr keypointDetector, IntPtr descriptorExtractor, out IntPtr returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus xfeatures2d_AffineFeature2D_create2(
        IntPtr keypointDetector, out IntPtr returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus xfeatures2d_Ptr_AffineFeature2D_delete(IntPtr ptr);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus xfeatures2d_Ptr_AffineFeature2D_get(IntPtr ptr, out IntPtr returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus xfeatures2d_AffineFeature2D_detect(
        OpenCvSafeHandle obj, in InputArrayProxy image, IntPtr keypoints, in InputArrayProxy mask);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus xfeatures2d_AffineFeature2D_detectAndCompute(
        OpenCvSafeHandle obj, in InputArrayProxy image, in InputArrayProxy mask,
        IntPtr keypoints, in OutputArrayProxy descriptors, int useProvidedKeypoints);
}
